--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.business.rolesengine</groupId>
-	<artifactId>businessRolesEngine</artifactId>
+	<groupId>com.business.rulesengine</groupId>
+	<artifactId>businessRulesEngine</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>customRolesEngine</name>
-	<description>Demo project for custom Roles Engine</description>
+	<name>BusinessRulesEngine</name>
+	<description>This is project for custom business rules Engine</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
